--- a/todoliast.css
+++ b/todoliast.css
@@ -30,6 +30,11 @@ form > input{
     margin-right: 20px;
 
 }
+.draw >img{
+    width:auto;
+    height: auto;
+    float: right;
+}
 .box{
     width: 80%;
     height: auto;
